Fix text index and add link onn link pages

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 13-09-2023 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 18-09-2023 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -33,7 +33,7 @@
                         <!-- ... more tabs for more categories ... -->
                     </ul>
 
-                    <!-- Tab content -->
+                    <!-- Learning Center -->
                     <div class="tab-content mt-3" id="linkTabContent">
                         <div class="tab-pane fade show active" id="category1" role="tabpanel"
                             aria-labelledby="category1-tab">
@@ -90,7 +90,7 @@
                             <!-- ... more links for this category ... -->
                         </div>
 
-
+                        <!-- ... Tools ... -->
                         <div class="tab-pane fade" id="category2" role="tabpanel" aria-labelledby="category2-tab">
                             <div class="row justify-content-center">
 
@@ -160,7 +160,7 @@
                                 <!-- ... more links for this category ... -->
                             </div>
                         </div>
-                        <!-- ... more content panels for more categories ... -->
+                        <!-- ... Machine Learning ... -->
                         <div class="tab-pane fade" id="category3" role="tabpanel" aria-labelledby="category3-tab">
                             <div class="row justify-content-center">
 
@@ -251,8 +251,8 @@
 
                                 <!-- ... more links for this category ... -->
                             </div>
-                            <!-- ... more links for this category ... -->
                         </div>
+                        <!-- ... Big Data ... -->
                         <div class="tab-pane fade" id="category4" role="tabpanel" aria-labelledby="category4-tab">
                             <div class="row justify-content-center">
 
@@ -328,10 +328,21 @@
                                     </div>
                                 </div>
 
-                                
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-warehouse card-img mt-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">VMWare</h5>
+                                            <a href="https://itacademy.brightspace.com/d2l/home" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
 
                             </div>
                         </div>
+                        <!-- ... AI Tools ... -->
                         <div class="tab-pane fade" id="category5" role="tabpanel" aria-labelledby="category5-tab">
                             <div class="row justify-content-center">
 
