--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 18-09-2023 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 14-10-2023 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -179,6 +179,19 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
+                                        <i class="fa-solid fa-n card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">NumPy</h5>
+                                            <a href="https://numpy.org/doc/stable/index.html"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
                                         <i class="fas fa-robot card-img mt-3"
                                             style="font-size: 3.5em; color: #000;"></i>
                                         <div class="card-body">
@@ -256,6 +269,19 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Keras</h5>
                                             <a href="https://keras.io/api/metrics/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-t card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">tensorFlow</h5>
+                                            <a href="https://www.tensorflow.org/"
                                                 class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
