--- a/views/link.ejs
+++ b/views/link.ejs
@@ -280,7 +280,7 @@
                                         <i class="fa-solid fa-t card-img mt-3"
                                             style="font-size: 3.5em; color: #000;"></i>
                                         <div class="card-body">
-                                            <h5 class="card-title">tensorFlow</h5>
+                                            <h5 class="card-title">TensorFlow</h5>
                                             <a href="https://www.tensorflow.org/"
                                                 class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
