--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
                         <a href="/contact" class="list-group-item list-group-item-action"><i class="fa-regular fa-address-book mr-2"></i> Contact me</a>
                         <a href="/link" class="list-group-item list-group-item-action"><i class="fa-solid fa-link mr-2"></i> Important Links</a>
                     </div>
-                    <img src="../assets/images/logo_jbaruz.png" class="img-fluid mx-auto d-block w-50" alt="Tech award photo">
+                    <img src="../assets/images/logo1.png" class="img-fluid mx-auto d-block w-25" alt="Tech award photo">
                 </div>
             </div>
         </div>
