--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 14-10-2023 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 21-10-2023 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -256,7 +256,7 @@
                                             style="font-size: 3.5em; color: #000;"></i>
                                         <div class="card-body">
                                             <h5 class="card-title">Neural Network</h5>
-                                            <a href="http://neuralnetworksanddeeplearning.com/chap1.html/" class="btn btn-light" target="_blank"
+                                            <a href="http://neuralnetworksanddeeplearning.com" class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
                                     </div>
