Add new links on links page

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 21-10-2023 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 02-11-2023 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -282,6 +282,32 @@
                                         <div class="card-body">
                                             <h5 class="card-title">TensorFlow</h5>
                                             <a href="https://www.tensorflow.org/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Gym / openai</h5>
+                                            <a href="https://github.com/openai/gym/tree/master/gym"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-cotton-bureau card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Gymnasium Documentation</h5>
+                                            <a href="https://gymnasium.farama.org"
                                                 class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
