--- a/views/link.ejs
+++ b/views/link.ejs
@@ -418,6 +418,18 @@
                                     </div>
                                 </div>
 
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-regular fa-star card-img mt-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Pyspark Overview</h5>
+                                            <a href="https://spark.apache.org/docs/latest/api/python/index.html" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                         <!-- ... AI Tools ... -->
