Add new links OpenAI

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 08-11-2023 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 13-11-2023 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -216,7 +216,7 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
-                                        <i class="fas fa-file-code card-img mt-3"
+                                        <i class="fa-brands fa-github card-img mt-3"
                                             style="font-size: 3.5em; color: #000;"></i>
                                         <div class="card-body">
                                             <h5 class="card-title">Ageron Git hub</h5>
@@ -467,6 +467,18 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Monica</h5>
                                             <a href="https://monica.im" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-atom card-img mt-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">OpenAI</h5>
+                                            <a href="https://platform.openai.com/overview" class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
                                     </div>
