Add new address contact

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
-        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 02-09-2023 -->
+        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 21-11-2023 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-4 float-sm-start">
                 <div class="jumbotron text-between">
@@ -81,7 +81,7 @@
                                                     <p class="mb-0">Address</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="text-muted mb-0">Ajax Area, Ontario, CA</p>
+                                                    <p class="text-muted mb-0">Etobicoke Area, Toronto, Ontario, CA</p>
                                                 </div>
                                             </div>
                                         </div>
