--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,7 +13,7 @@
                             <h5 class="my-3">Juan Arevalo</h5>
                             <p class="text-muted mb-1">AI Learner & Expert in Mining Equipment Wear Solutions</p>
                             <a href="/" class="text-muted mb-3" style="display: block;" target="_blank">jbaruz.dev</a>
-                            <p class="text-muted mb-4">Ajax Area, Ontario, CA</p>
+                            <p class="text-muted mb-4">Etobicoke Area, Toronto, Ontario, CA</p>
                         </div>
                 </div>
                 <div class="p-2 flex-fill">
