Add new link on link page

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -157,6 +157,19 @@
                                     </div>
                                 </div>
 
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-infinity card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Google colab</h5>
+                                            <a href="https://colab.research.google.com/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <!-- ... more links for this category ... -->
                             </div>
                         </div>
