Add page into link page Github code

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 05-12-2023 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 27-12-2023 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -29,6 +29,11 @@
                         <li class="nav-item">
                             <a class="nav-link" id="category5-tab" data-toggle="tab" href="#category5" role="tab"
                                 aria-controls="category5" aria-selected="false">AI tools</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="category6-tab" data-toggle="tab" href="#category6" role="tab"
+                                aria-controls="category6" aria-selected="false">Github Code</a>
                         </li>
                         <!-- ... more tabs for more categories ... -->
                     </ul>
@@ -229,18 +234,6 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
-                                        <i class="fa-brands fa-github card-img mt-3"
-                                            style="font-size: 3.5em; color: #000;"></i>
-                                        <div class="card-body">
-                                            <h5 class="card-title">Ageron Git hub</h5>
-                                            <a href="https://github.com/ageron/handson-ml3" class="btn btn-light" target="_blank"
-                                                rel="noopener noreferrer">Visit</a>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-4 mb-3">
-                                    <div class="card text-center">
                                         <i class="fas fa-laptop-code card-img mt-3"
                                             style="font-size: 3.5em; color: #000;"></i>
                                         <div class="card-body">
@@ -295,19 +288,6 @@
                                         <div class="card-body">
                                             <h5 class="card-title">TensorFlow</h5>
                                             <a href="https://www.tensorflow.org/"
-                                                class="btn btn-light" target="_blank"
-                                                rel="noopener noreferrer">Visit</a>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-4 mb-3">
-                                    <div class="card text-center">
-                                        <i class="fa-brands fa-github card-img mt-3"
-                                            style="font-size: 3.5em; color: #000;"></i>
-                                        <div class="card-body">
-                                            <h5 class="card-title">Gym / openai</h5>
-                                            <a href="https://github.com/openai/gym/tree/master/gym"
                                                 class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
@@ -511,6 +491,66 @@
 
                             </div>
                         </div>
+
+                        <!-- ... Github Code ... -->
+                        <div class="tab-pane fade" id="category6" role="tabpanel" aria-labelledby="category6-tab">
+                            <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Ageron Git hub</h5>
+                                            <a href="https://github.com/ageron/handson-ml3" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Gym / openai</h5>
+                                            <a href="https://github.com/openai/gym/tree/master/gym"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">NLP by Vajjala</h5>
+                                            <a href="https://github.com/practical-nlp/practical-nlp-code"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">LDL by Magnus</h5>
+                                            <a href="https://github.com/NVDLI/LDL/tree/main"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- ... more links for this category ... -->
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
                 <br>
