--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
         <div class="jumbotron text-center bg-gradient-light">
             <h1 class="display-4">Embarking on an AI Odyssey!</h1>
             <!-- Add this line where you want to display the last updated date -->
-            <p id="lastUpdated">Last Updated: </p>
+            <p id="lastUpdated">Today's date: </p>
             <!-- Add this in your body wherever you want the animation to appear -->
             <div class="star-wars-container">
                 <div class="crawl">
