Update links page with NLP

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 27-12-2023 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 12-01-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -34,6 +34,11 @@
                         <li class="nav-item">
                             <a class="nav-link" id="category6-tab" data-toggle="tab" href="#category6" role="tab"
                                 aria-controls="category6" aria-selected="false">Github Code</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="category7-tab" data-toggle="tab" href="#category7" role="tab"
+                                aria-controls="category7" aria-selected="false">NLP</a>
                         </li>
                         <!-- ... more tabs for more categories ... -->
                     </ul>
@@ -491,7 +496,6 @@
 
                             </div>
                         </div>
-
                         <!-- ... Github Code ... -->
                         <div class="tab-pane fade" id="category6" role="tabpanel" aria-labelledby="category6-tab">
                             <div class="row justify-content-center">
@@ -550,7 +554,25 @@
                                 <!-- ... more links for this category ... -->
                             </div>
                         </div>
-                        
+                        <!-- ... Natural Language Processig ... -->
+                        <div class="tab-pane fade" id="category7" role="tabpanel" aria-labelledby="category7-tab">
+                            <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-house card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">nlpaug</h5>
+                                            <a href="https://nlpaug.readthedocs.io/en/latest/index.html"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ... more links for this category ... -->
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <br>
