Update links page with NLP

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -570,6 +570,19 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-circle-dot card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Gensim</h5>
+                                            <a href="https://radimrehurek.com/gensim/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
                                 <!-- ... more links for this category ... -->
                             </div>
                         </div>
