Update links page with AWS and Boto3

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 14-01-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 16-01-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -45,6 +45,7 @@
 
                     <!-- Learning Center -->
                     <div class="tab-content mt-3" id="linkTabContent">
+
                         <div class="tab-pane fade show active" id="category1" role="tabpanel"
                             aria-labelledby="category1-tab">
                             <div class="row justify-content-center">
@@ -331,6 +332,30 @@
                         <!-- ... Big Data ... -->
                         <div class="tab-pane fade" id="category4" role="tabpanel" aria-labelledby="category4-tab">
                             <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-b card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Boto3</h5>
+                                            <a href="https://boto3.amazonaws.com/v1/documentation/api/latest/index.html" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-aws card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">AWS</h5>
+                                            <a href="https://aws.amazon.com/console/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
