Update links page

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -531,6 +531,18 @@
                                     </div>
                                 </div>
 
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-bezier-curve card-img mt-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">PathMind</h5>
+                                            <a href="https://wiki.pathmind.com/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                         <!-- ... Github Code ... -->
