Update links page

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 13-02-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 19-02-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -187,6 +187,19 @@
                         <!-- ... Machine Learning ... -->
                         <div class="tab-pane fade" id="category3" role="tabpanel" aria-labelledby="category3-tab">
                             <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fas fa-solid fa-calculator card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Begginer AI guide</h5>
+                                            <a href="https://wiki.pathmind.com/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
