Update index and botton_nav

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
 
-<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 29-12-2023 -->
+<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 25-02-2024 -->
 <div class="d-flex justify-content-center bg-light vh-100">
     <main class="container py-5">
         <div class="jumbotron text-center bg-gradient-light">
@@ -11,11 +11,11 @@
             <div class="star-wars-container">
                 <div class="crawl">
                     <div class="title">
-                        <p>Stepping into the Future</p>
-                        <h1>AI: Tools for a Better Tomorrow</h1>
+                        <p>I am Juan Arevalo</p>
+                        <h1>a dedicated Technical Product Manager</h1>
                     </div>
-                    <p>Artificial Intelligence is more than just tech jargon – it's a real, tangible tool that can solve practical problems. Whether it's making cities smarter, healthcare more efficient, or simply helping businesses run better, AI is making its mark.</p>
-                    <p>At Centennial College, I'm diving deep into this technology. My goal? To understand how we can use AI to make the world a better place to live. Join me as we explore the practical world of AI and its potential to drive positive change.</p>
+                    <p>with a rich history in abrasion solutions and an evolving passion for software engineering and artificial intelligence. With over 15 years of experience in enhancing the durability and efficiency of ground-engaging tools, my journey has now embraced the transformative power of AI. </p>
+                    <p>My goal is to pioneer AI-driven abrasion wear technologies that redefine predictive maintenance and design optimization. 'Innovation is seeing what everybody has seen and thinking what nobody has thought.' This belief motivates me to merge traditional engineering with cutting-edge AI, aiming to lead projects that set new standards in the industry.</p>
                 </div>
             </div>
         </div>
